--- a/index.html
+++ b/index.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Kitchen</title>
-</head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/6b1870cd0b.js" crossorigin="anonymous"></script>
+  </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark mybgcolor bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><span class="h3">Global Kitchen</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
     
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item active">
+                <a class="nav-link h4" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h4" href="#footer">Contact</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0 ">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark mybgcolor text-white">
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-4 text-center mx-auto">
+                    <h5>Global Kitchen</h5>
+                    <p>
+                        We are a team of dedicated professionals delivering delicious meals to your doorstep
+                    </p>
+                </div>
+                <div class="col-md-4 text-center mx-auto">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="https://google.com">Google</a>
+                        </li>
+                        <li><a href="https://facebook.com">Facebook</a>
+                        </li>
+                        <li><a href="https://twitter.com">Twitter</a>
+                    </ul>
+                </div>
+                <div class="col-md-4 text-center mx-auto">
+                    <h5>Contact</h5>
+                    <ul class="list-unstyled">
+                        <li>Phone: +880 1234567890</li>
+                        <li>Email:abc@book.org
+                        </li>
+                        <li>Address: 123, ABC Road, XYZ City</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container text-center">
+            <small>&copy; 2024 Sani. All rights reserved.</small>
+        </div>
+    </footer>
 </body>
 </html>
